View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028500 | Open CASCADE | OCCT:Mesh | public | 2017-03-01 19:11 | 2021-10-07 12:12 |
Reporter | msv | Assigned To | oan | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Product Version | 7.1.0 | ||||
Target Version | 7.7.0 | ||||
Summary | 0028500: Mesh - Artifact in shaded view of the shape | ||||
Description | During meshing with BRepMesh of the attached shape the algorithm reports OpenWire meshing status. This results in artifact displayed in shaded view in the form of a green line (see the picture). Actually the faces for which the status OpenWire is reported are valid faces. It is needed to teach BRepMesh produce triangles for such faces, even if they are degenerated in a line, in order to produce conform mesh. | ||||
Steps To Reproduce | restore shape_mesh_artifact.brep a incmesh a 0.01 | ||||
Tags | No tags attached. | ||||
Test case number | bugs mesh bug28500 | ||||
|
shape_mesh_artifact.brep (60,209 bytes) |
|
mesh_pb.PNG (15,383 bytes) |
|
DC, It would be easy to try to implement custom processing of cases consisting of two edges which ends are covered by vertex tolerances after integration of 0026106 as far it allows processing and modification of wires and particular edges. |
|
I agree. |
|
Problem described in issue is reproduced on current state of OCCT. |
|
Branch CR28500 has been created by oan. SHA-1: 845785da4787cc0f8781cd6c79bec110a75d7744 Detailed log of new commits: Author: oan Date: Sat Oct 19 19:22:38 2019 +0300 0028500: Artifact in shaded view of the shape increase minimum number of discretization points by one explicitly on each iteration of model healer to cover cases degenerated to line |
|
Branch CR28500 has been updated by oan. SHA-1: f92206a61a77ff4420d6387404a04f900e0e2779 Detailed log of new commits: Author: oan Date: Sun Oct 20 00:41:48 2019 +0300 # modified test case |
|
Branch CR28500 has been updated forcibly by oan. SHA-1: a66a5d097c396d3140e98c52bb66f047a039eeb6 |
|
Branch CR28500 has been updated forcibly by oan. SHA-1: 9dfde6c9b3b6b8605e33febf5cc14db6e9661df8 |
|
Branch CR28500 has been updated by oan. SHA-1: 18d60a72fc7b7573973c385d5df6e320cea2c3b7 Detailed log of new commits: Author: oan Date: Tue Oct 22 11:28:49 2019 +0300 # updated test cases |
|
Branch CR28500 has been updated forcibly by oan. SHA-1: af5ac75fa762e7026ee7c8e04a6a6876b9e1be63 |
|
Branch CR28500_1 has been created by oan. SHA-1: 3c7e218e18aa3c2ef01354bc61d7b0cfb47bd2a0 Detailed log of new commits: Author: oan Date: Wed Oct 30 12:08:19 2019 +0300 0028500: Artifact in shaded view of the shape increase minimum number of discretization points by one explicitly on each iteration of model healer to cover cases degenerated to line |
|
Branch CR28500_1 has been updated forcibly by oan. SHA-1: 0d5b7b80e0305729e0818a21fefe16c6c7242395 |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-03-01 19:11 | msv | New Issue | |
2017-03-01 19:11 | msv | Assigned To | => oan |
2017-03-01 19:11 | msv | File Added: shape_mesh_artifact.brep | |
2017-03-01 19:12 | msv | File Added: mesh_pb.PNG | |
2017-03-02 11:18 | oan | Note Added: 0064068 | |
2017-03-02 12:30 | msv | Note Added: 0064073 | |
2017-07-20 12:43 | oan | Target Version | 7.2.0 => 7.3.0 |
2017-08-31 16:18 |
|
Test case number | => bugs mesh bug28500 |
2017-08-31 16:18 |
|
Note Added: 0070125 | |
2018-02-25 23:12 | abv | Target Version | 7.3.0 => 7.4.0 |
2019-09-06 16:16 | oan | Target Version | 7.4.0 => 7.5.0 |
2019-10-07 18:59 | oan | Relationship added | parent of 0031043 |
2019-10-19 19:23 | git | Note Added: 0088331 | |
2019-10-20 00:42 | git | Note Added: 0088339 | |
2019-10-20 00:44 | git | Note Added: 0088340 | |
2019-10-21 19:36 | git | Note Added: 0088394 | |
2019-10-22 12:06 | git | Note Added: 0088407 | |
2019-10-28 13:49 | git | Note Added: 0088634 | |
2019-10-30 12:09 | git | Note Added: 0088659 | |
2019-11-07 13:03 | git | Note Added: 0088775 | |
2020-08-28 15:51 | oan | Target Version | 7.5.0 => 7.6.0 |
2021-08-24 00:24 | kgv | Summary | Artifact in shaded view of the shape => Mesh - Artifact in shaded view of the shape |
2021-10-07 12:12 | szy | Target Version | 7.6.0 => 7.7.0 |